# psynote

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
server-py/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server-py/alembic/: env.py
server-py/alembic/versions/: 0000_baseline.py  0001_phase2_additions.py  0002_add_phone_to_users.py
server-py/app/: main.py
server-py/app/api/: __init__.py
server-py/app/api/v1/: __init__.py  _schema_base.py
server-py/app/api/v1/admin/: __init__.py  dashboard_router.py  library_router.py  license_router.py  router.py  schemas.py  tenant_router.py
server-py/app/api/v1/ai/: __init__.py  assessment_router.py  course_authoring_router.py  credential_resolver.py  group_schemes_router.py  router.py  scales_material_router.py  schemas.py  shared.py  templates_router.py  treatment_router.py  usage_tracker.py
server-py/app/api/v1/ai_credentials/: __init__.py  org_router.py  schemas.py  services.py  system_router.py
server-py/app/api/v1/assessment/: __init__.py  assessment_router.py  batch_router.py  distribution_router.py  pdf_service.py  report_router.py  result_router.py  scale_router.py  schemas.py  triage_automation_service.py
server-py/app/api/v1/auth/: __init__.py  router.py  schemas.py
server-py/app/api/v1/client_portal/: __init__.py  appointments_router.py  assessment_router.py  client_router.py  counselors_router.py  dashboard_router.py  documents_consents_router.py  groups_courses_router.py  my_assessments_router.py  schemas.py  shared.py
server-py/app/api/v1/collaboration/: __init__.py  router.py  schemas.py
server-py/app/api/v1/compliance/: __init__.py  consent_router.py  review_router.py  schemas.py
server-py/app/api/v1/content_block/: __init__.py  router.py  schemas.py
server-py/app/api/v1/counseling/: __init__.py  ai_conversation_router.py  appointment_router.py  availability_router.py  client_access_grant_router.py  client_assignment_router.py  client_profile_router.py  episode_router.py  goal_library_router.py  note_template_router.py  public_router.py  schemas.py  services.py  session_note_router.py  treatment_plan_router.py
server-py/app/api/v1/course/: __init__.py  course_router.py  enrollment_router.py  feedback_router.py  homework_router.py  instance_router.py  public_enroll_router.py  schemas.py
server-py/app/api/v1/crisis/: __init__.py  dashboard_service.py  helpers.py  queries_service.py  router.py  schemas.py  workflow_service.py
server-py/app/api/v1/delivery/: __init__.py  launch_service.py  person_archive_router.py  person_archive_service.py  router.py  schemas.py  service.py
server-py/app/api/v1/eap/: __init__.py  analytics_router.py  assignment_router.py  event_emitter.py  partnership_router.py  public_router.py  schemas.py
server-py/app/api/v1/enrollment_response/: __init__.py  router.py  schemas.py
server-py/app/api/v1/follow_up/: __init__.py  router.py  schemas.py  service.py
server-py/app/api/v1/group/: __init__.py  enrollment_router.py  instance_router.py  public_enroll_router.py  schemas.py  scheme_router.py  session_router.py
server-py/app/api/v1/notification/: __init__.py  public_appointments_router.py  reminder_settings_router.py  router.py  schemas.py
server-py/app/api/v1/org/: __init__.py  branding_router.py  dashboard_router.py  license_router.py  public_services_router.py  router.py  schemas.py  subscription_router.py
server-py/app/api/v1/parent_binding/: __init__.py  admin_router.py  public_router.py  (+2 more)
server-py/app/core/: config.py  database.py  security.py
server-py/app/db/: __init__.py  base.py
server-py/app/db/models/: __init__.py  ai_call_logs.py  ai_conversations.py  ai_credentials.py  appointments.py  assessment_batches.py  assessment_reports.py  assessment_results.py  assessment_scales.py  assessments.py  audit_logs.py  candidate_pool.py  care_episodes.py  care_timeline.py  class_parent_invite_tokens.py  client_access_grants.py  client_assignments.py  client_documents.py  client_profiles.py  client_relationships.py  compliance_reviews.py  consent_records.py  consent_templates.py  counselor_availability.py  course_chapters.py  course_content_blocks.py  course_enrollments.py  course_feedback_forms.py  course_feedback_responses.py  course_homework_defs.py  course_homework_submissions.py  course_instances.py  course_interaction_responses.py  course_lesson_blocks.py  course_template_tags.py  courses.py  crisis_cases.py  dimension_rules.py  distributions.py  eap_counselor_assignments.py  (+37 more)
server-py/app/jobs/: __init__.py  beat_schedule.py  celery_app.py  compliance.py  followup.py  reminders.py
server-py/app/lib/: crypto.py  errors.py  mailer.py  phone_utils.py  safety_scanner.py  uuid_utils.py
server-py/app/middleware/: audit.py  auth.py  authorize.py  data_scope.py  error_handler.py  org_context.py  phi_access.py  rate_limit.py  role_guards.py
server-py/app/shared/: __init__.py  actions.py  data_class.py  policy.py  principal.py  roles.py  tier.py
server-py/tests/: conftest.py  test_alembic_smoke.py  test_main.py
server-py/tests/api/v1/: _conftest_helpers.py
server-py/tests/core/: test_config.py  test_database.py  test_security.py
server-py/tests/db/: conftest.py  test_metadata_reflection.py  test_models_ai_credentials.py  test_models_batch1.py  test_models_batch2.py  test_models_batch3.py  test_models_batch4a.py  test_models_batch4b.py  test_models_batch5a.py  test_models_batch5b.py
server-py/tests/jobs/: conftest.py  test_celery_app.py  test_compliance.py  test_followup.py  test_reminders.py
server-py/tests/lib/: test_crypto.py  test_errors.py  test_mailer.py  test_safety_scanner.py
server-py/tests/middleware/: test_audit.py  test_auth.py  test_authorize.py  test_data_scope.py  test_error_handler.py  test_org_context.py  test_phi_access.py  test_rate_limit.py  test_role_guards.py
server-py/tests/security/: test_phi_org_scoping.py
server-py/tests/shared/: test_policy.py  test_roles.py  test_tier.py
(+844 files in other folders)
