# Psynote Python server — Fastify → FastAPI 迁移目标 (Option C)
#
# 包管理: uv (https://docs.astral.sh/uv/) — 比 Poetry 快 10x, lock 兼容
# Python: 3.12+ (Pydantic v2 + SQLAlchemy 2.0 都受益于较新版本类型系统)
#
# 安装:  cd server-py && uv sync
# 启动:  uv run uvicorn app.main:app --reload --port 8001
# 测试:  uv run pytest
# Lint:  uv run ruff check . && uv run ruff format --check .
# Type:  uv run mypy app

[project]
name = "psynote-server"
version = "0.1.0"
description = "Psynote FastAPI backend (replacing Fastify Node server)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",            # FastAPI UploadFile (替代 @fastify/multipart)
    "slowapi>=0.1.9",                       # 速率限制 (替代 @fastify/rate-limit)
    # Validation / config
    "pydantic>=2.10.0",                     # 替代 zod
    "pydantic-settings>=2.7.0",             # 替代 dotenv + zod env schema
    # Database
    "sqlalchemy[asyncio]>=2.0.36",          # ORM (替代 drizzle-orm) — async + Mapped[] 风格
    "asyncpg>=0.30.0",                      # async Postgres driver
    "alembic>=1.14.0",                      # migrations (替代 drizzle-kit)
    "psycopg[binary]>=3.2.0",               # 同步 driver (Alembic + 一些 utility 用)
    # Auth / crypto
    # 直接用 bcrypt 库 (不走 passlib) — passlib 1.7.4 读 bcrypt.__about__ 但 bcrypt
    # 4.0+ 删了这个属性, 导致 passlib 把 bcrypt backend 标 unavailable, 所有 hash/verify
    # 都 fail。passlib 1.8 还没 release, 等不起。bcrypt 直接 API 也更简单。
    "bcrypt>=4.2.0",                        # 替代 bcryptjs, 与之 hash 格式 1:1 兼容
    "pyjwt>=2.10.0",                        # JWT (替代 jsonwebtoken) — 需 algorithms=['HS256'] pin
    # Jobs / queue
    "celery[redis]>=5.4.0",                 # 替代 BullMQ
    "redis>=5.2.0",                         # async client (替代 ioredis)
    # PDF / Email
    "weasyprint>=63.0",                     # HTML → PDF (替代 pdfkit)
    "jinja2>=3.1.0",                        # PDF 模板渲染
    "aiosmtplib>=3.0.0",                    # async SMTP (替代 nodemailer)
    "email-validator>=2.2.0",
    # HTTP client (AI provider)
    "httpx>=0.28.0",                        # 替代 fetch wrapper
    # Logging
    "structlog>=24.4.0",
    "filetype>=1.2.0",
]

[dependency-groups]
dev = [
    # Test — httpx 不在此处, 因为它已是 main 依赖 (AI client 用), TestClient
    # 直接复用. 防止主/dev 双声明导致版本漂移.
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "freezegun>=1.5.0",                     # 时间相关测试

    # Lint / format / type
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-redis",
    # 不需要 types-bcrypt (bcrypt 自带 py.typed); types-passlib 已下架, 一并移除。
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Tool config ────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 默认 + import-order + bugbear + naming + pyupgrade
select = ["E", "F", "I", "B", "N", "UP", "W", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line-too-long (formatter 处理)
    # RUF002/003 警告"歧义 unicode" (Cyrillic 'a' 混 Latin 'a' 之类). 我们故意
    # 用数学符号 ×/∪/∈ 作 RBAC 文档 + CJK 标点贯穿全代码, 这条规则在本代码库
    # 全是误报。
    "RUF001", "RUF002", "RUF003",
]

# B008 误报 white-list: FastAPI 的 Depends/Header/Query/... 在参数 default 调用是
# 框架推荐的标准用法 (依赖注入), 不是真正的 mutable default。
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.Cookie",
    "fastapi.File",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# SQLAlchemy 2.0 + asyncio 在 strict 下会报 generic 类型, 单独放宽
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
# 第三方包没有 stubs 的不报
module = ["weasyprint", "celery.*", "filetype"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Celery 任务装饰器返回 Any (typeshed 不完整), 这层不强制 typed-decorator —
# 任务体内部仍走 strict typing.
module = ["app.jobs.*"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # SQLAlchemy 2.0 在某些场景仍 emit 旧 warnings, 目前只忽略已知确定无害的。
    # 切到 bcrypt 直接调用后 passlib 那条已无关。
    #
    # PytestUnraisableExceptionWarning: pytest 在 session 收尾时 (config._ensure_unconfigure)
    # 跑 gc.collect, 把 GC 阶段触发的 ResourceWarning (asyncio selfpipe socket / 未关 event
    # loop) 包成 PytestUnraisableExceptionWarning 抛 ExceptionGroup, 配合 ``error`` 过滤把
    # session 退码改成 1 — 1561 测试全 pass 也整体红。
    # 这层是 pytest plugin 模型 + asyncio loop GC 时序问题, 不是测试 bug 也不是真泄漏 (loop
    # 本来就是 weakref-finalize 模式, GC 不及时不影响进程退出). 单独 ignore 这一类, 不影响
    # 其他真 ResourceWarning (DB session / file handle 在测试体内的泄漏, 仍会 error).
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]  # 入口文件覆盖率意义不大

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
